--- a/src/styles/base/base.css
+++ b/src/styles/base/base.css
@@ -1,6 +1,7 @@
 body {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     min-height: 100vh;
     line-height: 1.6;
     background-color: #ffffff;
@@ -15,5 +16,4 @@ a {
 
 main {
     display: flex;
-    flex-direction: column;
 }
