--- a/src/styles/main/style.css
+++ b/src/styles/main/style.css
@@ -1,27 +1,50 @@
-@import '../base/reset.css';
-@import '../base/base.css';
+@import "../base/reset.css";
+@import "../base/base.css";
 
 main {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+h1 {
+  font-size: 40px;
 }
 
 .pomo-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: green;
-    border: 1px solid black;
-    width: 200px;
-    height: 200px;
-
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: red;
+  border: 2px solid rgba(172, 136, 136, 0.459);
+  border-radius: 5%;
+  width: 300px;
+  height: 300px;
+  background-color: antiquewhite;
 }
 
 .action-box {
-    
-    background-color: red;
-    border: 2px solid blue;
-    width: fit-content;
+  padding-top: 30px;
+}
+
+.timer {
+  font-size: 25px;
+  padding-top: 15px;
+}
+
+.btn {
+  padding: 10px;
+  font-size: 15px;
+  font-weight: 600;
+  background-color: rgb(252, 151, 151);
+  color: rgba(14, 4, 4, 0.932);
+  border: none;
+  border-radius: 15%;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background-color: rgb(245, 148, 148);
+  color: rgb(179, 33, 33);
 }
